cmake_minimum_required(VERSION 3.12)
project(GLAdventures CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)


file(GLOB CPPS src/*.cpp)
add_executable(GLAdventures ${CPPS})
target_compile_options(GLAdventures PRIVATE -fpermissive)

if (USE_SYSTEM_LIBRARIES)
	find_package(OpenGL REQUIRED)
	find_package(GLEW REQUIRED)
	include(FindPkgConfig)
	pkg_check_modules(GLFW IMPORTED_TARGET glfw3 REQUIRED)
	pkg_check_modules(GLM IMPORTED_TARGET glm REQUIRED)
	target_link_libraries(GLAdventures PUBLIC OpenGL::OpenGL GLEW::GLEW PkgConfig::GLFW)
	target_compile_definitions(GLAdventures PRIVATE GLM_ENABLE_EXPERIMENTAL)
else()
	include(${CMAKE_SOURCE_DIR}/conanbuildinfo.cmake)
	conan_basic_setup(TARGETS)
	target_link_libraries(GLAdventures PUBLIC CONAN_PKG::gl CONAN_PKG::glew CONAN_PKG::glfw CONAN_PKG::glm)
endif()
